[package]
name = "log-rs"
version = "0.1.1"
authors = ["guilhem smith <smith.guilhem@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A small logging library."
repository = "https://github.com/guilhemSmith/log-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"